# icp-handeye

./: README.md
aruco_ros/aruco_ros/: CMakeLists.txt
aruco_ros/aruco_ros/include/aruco_ros/: aruco_ros_utils.h
aruco_ros/aruco_ros/launch/: multi.launch  single.launch
aruco_ros/aruco_ros/src/: aruco_ros_utils.cpp  multi.cpp
easy_handeye/easy_handeye/launch/: calibrate_depth.launch  calibrate_test.launch  rviz_easy_handeye.config
easy_handeye/easy_handeye/launch/eye_on_hand/: calibrate_depth.launch  rm_65_aruco_582_on_hand.launch  rm_65_calibrate_on_hand.launch
easy_handeye/easy_handeye/launch/eye_to_hand/: rm_65_aruco_582_to_hand.launch  rm_65_calibrate_to_hand.launch
easy_handeye/easy_handeye/src/easy_handeye/: handeye_calibration_backend_optimize.py  handeye_server.py
qr_code_icp/src/3dposedetection/: 3dpose_forcalibration.cpp  CMakeLists.txt  calibblock_gen.cpp  package.xml
qr_code_icp/src/3dposedetection/model_pcd/: test_model.pcd
qr_code_icp/src/icp_align/: 3dpose_forcalibration.cpp  CMakeLists.txt  calibblock_gen.cpp  package.xml
qr_code_icp/src/icp_align/launch/: icp_align.launch  save_block_pcd.launch
qr_code_icp/src/icp_align/pcl/registration/: super4pcs.h
